--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@ $(document).ready(function(){
       Activate alarms
     </div>
     <div class="level-item">
-      <div class="button is-danger" id="machine1">Machine # 1 alarm toggle</div>
-      <div class="button is-danger" id="machine2">Machine # 2 alarm toggle</div>
-      <div class="button is-danger" id="machine3">Machine # 3 alarm toggle</div>
-      <div class="button is-danger" id="machine4">Machine # 4 alarm toggle</div>
+      <div class="button is-danger" id="machine1on">Machine # 1 alarm toggle</div>
+      <div class="button is-danger" id="machine2on">Machine # 2 alarm toggle</div>
+      <div class="button is-danger" id="machine3on">Machine # 3 alarm toggle</div>
+      <div class="button is-danger" id="machine4on">Machine # 4 alarm toggle</div>
     </div>
   </div>
   <div class="level box">
@@ -40,10 +40,10 @@ $(document).ready(function(){
       Clear alarms 
     </div>
     <div class="level-item">
-      <div class="button is-primary" id="machine1">Machine # 1 alarm clear</div>
-      <div class="button is-primary" id="machine2">Machine # 2 alarm clear</div>
-      <div class="button is-primary" id="machine3">Machine # 3 alarm clear</div>
-      <div class="button is-primary" id="machine4">Machine # 4 alarm clear</div>
+      <div class="button is-primary" id="machine1off">Machine # 1 alarm clear</div>
+      <div class="button is-primary" id="machine2off">Machine # 2 alarm clear</div>
+      <div class="button is-primary" id="machine3off">Machine # 3 alarm clear</div>
+      <div class="button is-primary" id="machine4off">Machine # 4 alarm clear</div>
     </div>
   </div>
 </body>
